Chat fixes after working with Aaron

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -300,3 +300,42 @@
     </div>
   </div>
 </div>
+<!--
+        BEGIN: Modals Layout.
+        --
+    -->
+<!--<div-->
+  <!--bn-modals-->
+  <!--ng-show="subview"-->
+  <!--class="m-modals"-->
+  <!--ng-switch="subview">-->
+
+  <!--&lt;!&ndash; BEGIN: Prompt Modal. &ndash;&gt;-->
+  <!--<form-->
+    <!--ng-switch-when="prompt"-->
+    <!--ng-submit="submit()"-->
+    <!--class="modal">-->
+
+    <!--<p>-->
+      <!--Testing-->
+    <!--</p>-->
+
+    <!--<p ng-if="errorMessage">-->
+      <!--<strong>Sorry:</strong> Error-->
+    <!--</p>-->
+
+    <!--<p>-->
+      <!--<input type="text" ng-model="form.input" />-->
+    <!--</p>-->
+
+    <!--<p>-->
+      <!--<a ng-click="submit()">Submit</a>-->
+      <!--&mdash;-->
+      <!--<a ng-click="cancel()">Cancel</a>-->
+    <!--</p>-->
+
+  <!--</form>-->
+  <!--&lt;!&ndash; END: Prompt Modal. &ndash;&gt;-->
+
+<!--</div>-->
+<!-- END: Modals Layout. -->
