--- a/client/index.html
+++ b/client/index.html
@@ -42,7 +42,6 @@
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="components/layout/navbar/navbar.css">
       <link rel="stylesheet" href="components/widgets/fileupload/fileupload.css">
-      <link rel="stylesheet" href="components/widgets/modal/modal.css">
       <!-- endinjector -->
     <!-- endbuild -->
   </head>
@@ -190,7 +189,8 @@
           <script src="components/widgets/fileupload/ngthumb.js"></script>
           <script src="components/widgets/loading/loading.js"></script>
           <script src="components/widgets/menu/angular-pageslide.js"></script>
-          <script src="components/widgets/modal/modal.service.js"></script>
+          <script src="components/widgets/modal/bnModals.js"></script>
+          <script src="components/widgets/modal/modals.js"></script>
           <script src="components/widgets/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/widgets/my-spinner/my.spinner.js"></script>
           <script src="components/widgets/phone-mask/phone.mask.js"></script>
