--- a/client/index.html
+++ b/client/index.html
@@ -33,6 +33,8 @@
       <link rel="stylesheet" href="bower_components/toastr/toastr.css" />
       <link rel="stylesheet" href="bower_components/angucomplete-alt/angucomplete-alt.css" />
       <link rel="stylesheet" href="bower_components/slick-carousel/slick/slick.css" />
+      <link rel="stylesheet" href="bower_components/ngDialog/css/ngDialog.css" />
+      <link rel="stylesheet" href="bower_components/ngDialog/css/ngDialog-theme-default.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -99,6 +101,7 @@
       <script src="bower_components/angular-media-queries/match-media.js"></script>
       <script src="bower_components/pubnub-angular/lib/pubnub-angular.js"></script>
       <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
+      <script src="bower_components/ngDialog/js/ngDialog.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
