Reverting modal code

--- a/client/app/dashboard/around.you.html
+++ b/client/app/dashboard/around.you.html
@@ -44,8 +44,7 @@
           </div>
           <table>
             <tr>
-              <td><a ng-click="promptSomething()"><i class="fa fa-comments-o fa-lg"></i></a></td>
-              <!--<td><i class="fa fa-comments-o fa-lg"></i></td>-->
+              <td><i class="fa fa-comments-o fa-lg"></i></td>
               <td>
                 <a id="email" ng-href="mailto:{{around.email}}?Subject=Hello">
                   <i class="fa fa-envelope-o fa-lg"></i></a>
