Implementation for the modal including styling. Need fix for accessing data in modal scope.

--- a/client/app/dashboard/around.you.html
+++ b/client/app/dashboard/around.you.html
@@ -44,7 +44,16 @@
           </div>
           <table>
             <tr>
-              <td><i class="fa fa-comments-o fa-lg"></i></td>
+              <td ng-click="open()"><i class="fa fa-comments-o fa-lg"></i></td>
+              <script type="text/ng-template" id="aroundYouMessage">
+                <form class="messageTemplateForm" name="messageForm">
+                  <h3>Message username</h3>
+                  <textarea placeholder="Your message here..." type="text" ng-model="around.message" rows="3" required ng-minlength="1"></textarea>
+                  <button class="btn-rented-medium primary" ng-click="dashboard.privateMessage(around.email, around.firstname, around.message)" ng-hide="!messageForm.$valid">Send</button>
+                  <button class="btn-rented-medium disabled" ng-show="!messageForm.$valid" disabled>Send</button>
+                </form>
+                <p>Test data - {{around.message}}</p>
+              </script>
               <td>
                 <a id="email" ng-href="mailto:{{around.email}}?Subject=Hello">
                   <i class="fa fa-envelope-o fa-lg"></i></a>
@@ -63,11 +72,6 @@
               </td>
             </tr>
           </table>
-          <form>
-            <label for="pm">Send PM</label>
-            <input id="pm" type="text" ng-model="around.message" />
-            <button ng-click="dashboard.privateMessage(around.email, around.firstname, around.message)">Send</button>
-          </form>
         </div>
       </slick>
       <hr ng-if="dashboard.address.streetAddress.id && dashboard.me.shareProfile && dashboard.aroundYou.length">
