--- a/client/app/dashboard/around.you.html
+++ b/client/app/dashboard/around.you.html
@@ -44,16 +44,21 @@
           </div>
           <table>
             <tr>
-              <td ng-click="open()"><i class="fa fa-comments-o fa-lg"></i></td>
+
+
+              <td ng-click="open(around.email, around.firstname, around.lastname)"><i class="fa fa-comments-o fa-lg"></i></td>
               <script type="text/ng-template" id="aroundYouMessage">
                 <form class="messageTemplateForm" name="messageForm">
-                  <h3>Message username</h3>
+                  <h3>Message to {{ngDialogData.firstName}}</h3>
                   <textarea placeholder="Your message here..." type="text" ng-model="around.message" rows="3" required ng-minlength="1"></textarea>
-                  <button class="btn-rented-medium primary" ng-click="dashboard.privateMessage(around.email, around.firstname, around.message)" ng-hide="!messageForm.$valid">Send</button>
+                  <button class="btn-rented-medium primary" ng-click="sendMessage(around.message, ngDialogData.email, ngDialogData.firstName, ngDialogData.lastName)" ng-hide="!messageForm.$valid">Send</button>
                   <button class="btn-rented-medium disabled" ng-show="!messageForm.$valid" disabled>Send</button>
                 </form>
-                <p>Test data - {{around.message}}</p>
               </script>
+
+
+
+
               <td>
                 <a id="email" ng-href="mailto:{{around.email}}?Subject=Hello">
                   <i class="fa fa-envelope-o fa-lg"></i></a>
