--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -163,14 +163,14 @@
                       <a id="email" ng-href="mailto:{{looking.relatedUserId.email}}?subject=Interested%20in%20your%20available%20housing&body=Hi%20{{looking.relatedUserId.firstname}}%2C%0A%0A%0A%0AThanks%2C%0A{{dashboard.me.firstname}}%0Ahttps://campusly.org/lookingDetail/{{looking.id}}/of/{{looking.id}}">
                         <i class="fa fa-envelope-o fa-lg"></i></a>
                       <script type="text/javascript">
-                        mixpanel.track_links("#email", "Email sent - available room");
+                        mixpanel.track_links("#email", "Email sent - looking");
                       </script>
                     </td>
                     <td>
                       <a id="facebookPM" ng-if="looking.relatedUserId.facebook" ng-href="{{looking.relatedUserId.facebook}}" target="_blank">
                         <i class="fa fa-facebook-square fa-lg"></i></a>
                       <script type="text/javascript" ng-if="looking.relatedUserId.facebook">
-                        mixpanel.track_links("#facebookPM", "Facebook PM sent - available room");
+                        mixpanel.track_links("#facebookPM", "Facebook PM sent - looking");
                       </script>
                     </td>
                   </tr>
