--- a/client/app/roomDetail/roommate.section.html
+++ b/client/app/roomDetail/roommate.section.html
@@ -12,7 +12,7 @@
         <div class="col-xs-2 col-sm-4 col-md-4 col-lg-4">
           <div class="picture text-center">
             <img ng-if="roommate.relatedRoommateId.profileImage" ng-src="api/images{{roommate.relatedRoommateId.profileImage}}" alt="" class="img-circle center-block looking-profile-img">
-            <i ng-if="!roommate.relatedRoommateId.profileImage" class="fa fa-user fa-3x"></i>
+            <i ng-if="!roommate.relatedRoommateId.profileImage" class="fa fa-smile-o fa-3x" style="color: #929292"></i>
           </div>
         </div>
 
