--- a/client/app/rooms/rooms.html
+++ b/client/app/rooms/rooms.html
@@ -87,7 +87,16 @@
                     </a>
                     <table>
                       <tr>
-                        <!--<td><i class="fa fa-comments-o fa-lg"></i></td>-->
+                        <td ng-click="open(room.relatedCreatorId.email, room.relatedCreatorId.firstname, room.relatedCreatorId.lastname)"><i class="fa fa-comments-o fa-lg"></i></td>
+                        <script type="text/ng-template" id="aroundYouMessage">
+                          <form class="messageTemplateForm" name="messageForm" ng-hide="messageSent">
+                            <h3>Message to {{ngDialogData.firstName | limitTo: 16}} {{ngDialogData.lastName | limitTo: 16}}</h3>
+                            <textarea placeholder="Your message here..." type="text" ng-model="around.message" rows="3" required ng-minlength="1"></textarea>
+                            <button class="btn-rented-medium primary" ng-click="sendMessage(around.message, ngDialogData.email, ngDialogData.firstName, ngDialogData.lastName)" ng-hide="!messageForm.$valid">Send</button>
+                            <button class="btn-rented-medium disabled" ng-show="!messageForm.$valid" disabled>Send</button>
+                          </form>
+                          <p class="messageTemplateSentMessage">{{messageSent}}</p>
+                        </script>
                         <td>
                           <a id="email" ng-href="mailto:{{room.relatedCreatorId.email}}?subject=Interested%20in%20your%20available%20housing&body=Hi%20{{room.relatedCreatorId.firstname}}%2C%0A%0A%0A%0AThanks%2C%0A{{rooms.me.firstname}}%0Ahttps://campusly.org/roomDetail/{{room.roomDetails.id}}/of/{{room.roomDetails.id}}">
                             <i class="fa fa-envelope-o fa-lg"></i></a>
