Front-end changes to the landing page. Added Off-campus Housing channel for launch

--- a/client/app/landing/community.html
+++ b/client/app/landing/community.html
@@ -4,7 +4,7 @@
 
     <section class="value-landing-housing">
 
-      <h1>Search for rental housing by verified students based on your needs</h1>
+      <h1>Get the answers you need quickly</h1>
 
     </section>
 
