--- a/client/app/landing/howitworks.html
+++ b/client/app/landing/howitworks.html
@@ -5,7 +5,7 @@
     <div class="filter"></div>
     <div class="title-container">
       <h1>Chat with your university student services - RA's, ResLife, Career Center, etc.</h1>
-      <h3>Coming Soon</h3>
+      <h3>Contact us to add your school</h3>
     </div>
     <video autoplay loop class="fillWidth">
       <source src="././../assets/videos/keyboard/keyboard.webm" type="video/webm" />
