Using min version of pubnub and removed using the video of the computer and using standard jpg

--- a/client/index.html
+++ b/client/index.html
@@ -14,8 +14,8 @@
     || window.location.href.startsWith('https://www.campusly.org') || window.location.href.startsWith('http://www.campusly.org'))
       {mixpanel.init("bd202854d110bac5e72d7e034abdae01", {'loaded':function() {window.Gdistinct_id = mixpanel.get_distinct_id();}})} else {
     mixpanel.init("41a02b2df2e263307327276d0ed559ec", {'loaded':function() {window.Gdistinct_id = mixpanel.get_distinct_id();}})}</script><!-- end Mixpanel -->
-    <script src="//cdn.optimizely.com/js/2780703231.js"></script> <!-- Optimizely code snippet -->
-    <script src="https://cdn.pubnub.com/pubnub-3.7.14.js"></script> <!-- Core PubNub JS Library from CDN. Need to call a specific version -->
+    <!--<script src="//cdn.optimizely.com/js/2780703231.js"></script> &lt;!&ndash; Optimizely code snippet &ndash;&gt;-->
+    <script src="https://cdn.pubnub.com/pubnub-3.7.14.min.js"></script> <!-- Core PubNub JS Library from CDN. Need to call a specific version -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <base href="/">
