--- a/client/app/messages/messages.html
+++ b/client/app/messages/messages.html
@@ -107,7 +107,7 @@
                 <textarea placeholder="Your reply here..." type="text" ng-model="messages.newMessage" rows="3" ng-minlength="1" required></textarea>
               </div>
               <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 message-button">
-                <button class="btn-rented-medium primary" ng-click="messages.currentPublish()" ng-show="chatBox.$valid">Reply</button>
+                <button class="btn-rented-medium primary" ng-click="messages.currentPublish(); messages.trackMixpanelMessageSent()" ng-show="chatBox.$valid">Reply</button>
                 <button class="btn-rented-medium disabled" ng-show="!chatBox.$valid">Reply</button>
               </div>
             </form>
