--- a/client/app/dashboard/around.you.html
+++ b/client/app/dashboard/around.you.html
@@ -45,12 +45,12 @@
           <table>
             <tr>
 
-              <td ng-click="open(around.email, around.firstname, around.lastname)"><i class="fa fa-comments-o fa-lg"></i></td>
+              <td ng-click="openAroundYou(around.email, around.firstname, around.lastname)"><i class="fa fa-comments-o fa-lg"></i></td>
               <script type="text/ng-template" id="aroundYouMessage">
                 <form class="messageTemplateForm" name="messageForm" ng-hide="messageSent">
                   <h3>Message to {{ngDialogData.firstName | limitTo: 16}} {{ngDialogData.lastName | limitTo: 16}}</h3>
                   <textarea placeholder="Your message here..." type="text" ng-model="around.message" rows="3" required ng-minlength="1"></textarea>
-                  <button class="btn-rented-medium primary" ng-click="sendMessage(around.message, ngDialogData.email, ngDialogData.firstName, ngDialogData.lastName)" ng-hide="!messageForm.$valid">Send</button>
+                  <button class="btn-rented-medium primary" ng-click="sendMessage(around.message, ngDialogData.email, ngDialogData.firstName, ngDialogData.lastName); trackAroundMessage()" ng-hide="!messageForm.$valid">Send</button>
                   <button class="btn-rented-medium disabled" ng-show="!messageForm.$valid" disabled>Send</button>
                 </form>
                 <p class="messageTemplateSentMessage">{{messageSent}}</p>
