--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -98,7 +98,16 @@
                 </a>
                 <table>
                   <tr>
-                    <td ng-click="open(room.relatedCreatorId.email, room.relatedCreatorId.firstname, room.relatedCreatorId.lastname)"><i class="fa fa-comments-o fa-lg"></i></td>
+                    <td ng-click="openAvailableHousing(room.relatedCreatorId.email, room.relatedCreatorId.firstname, room.relatedCreatorId.lastname)"><i class="fa fa-comments-o fa-lg"></i></td>
+                    <script type="text/ng-template" id="availableHousingMessage">
+                      <form class="messageTemplateForm" name="messageForm" ng-hide="messageSent">
+                        <h3>Message to {{ngDialogData.firstName | limitTo: 16}} {{ngDialogData.lastName | limitTo: 16}}</h3>
+                        <textarea placeholder="Your message here..." type="text" ng-model="around.message" rows="3" required ng-minlength="1"></textarea>
+                        <button class="btn-rented-medium primary" ng-click="sendMessage(around.message, ngDialogData.email, ngDialogData.firstName, ngDialogData.lastName); trackAvailableHousingMessage()" ng-hide="!messageForm.$valid">Send</button>
+                        <button class="btn-rented-medium disabled" ng-show="!messageForm.$valid" disabled>Send</button>
+                      </form>
+                      <p class="messageTemplateSentMessage">{{messageSent}}</p>
+                    </script>
                     <td>
                       <a id="email" ng-href="mailto:{{room.relatedCreatorId.email}}?subject=Interested%20in%20your%20available%20housing&body=Hi%20{{room.relatedCreatorId.firstname}}%2C%0A%0A%0A%0AThanks%2C%0A{{dashboard.me.firstname}}%0Ahttps://campusly.org/roomDetail/{{room.roomDetails.id}}/of/{{room.roomDetails.id}}">
                         <i class="fa fa-envelope-o fa-lg"></i></a>
@@ -158,7 +167,16 @@
                 </a>
                 <table>
                   <tr>
-                    <td ng-click="open(looking.relatedUserId.email, looking.relatedUserId.firstname, looking.relatedUserId.lastname)"><i class="fa fa-comments-o fa-lg"></i></td>
+                    <td ng-click="openLookingForRoommates(looking.relatedUserId.email, looking.relatedUserId.firstname, looking.relatedUserId.lastname)"><i class="fa fa-comments-o fa-lg"></i></td>
+                    <script type="text/ng-template" id="lookingForRoommatesMessage">
+                      <form class="messageTemplateForm" name="messageForm" ng-hide="messageSent">
+                        <h3>Message to {{ngDialogData.firstName | limitTo: 16}} {{ngDialogData.lastName | limitTo: 16}}</h3>
+                        <textarea placeholder="Your message here..." type="text" ng-model="around.message" rows="3" required ng-minlength="1"></textarea>
+                        <button class="btn-rented-medium primary" ng-click="sendMessage(around.message, ngDialogData.email, ngDialogData.firstName, ngDialogData.lastName); trackLookingForRoommatesMessage()" ng-hide="!messageForm.$valid">Send</button>
+                        <button class="btn-rented-medium disabled" ng-show="!messageForm.$valid" disabled>Send</button>
+                      </form>
+                      <p class="messageTemplateSentMessage">{{messageSent}}</p>
+                    </script>
                     <td>
                       <a id="email" ng-href="mailto:{{looking.relatedUserId.email}}?subject=Interested%20in%20your%20available%20housing&body=Hi%20{{looking.relatedUserId.firstname}}%2C%0A%0A%0A%0AThanks%2C%0A{{dashboard.me.firstname}}%0Ahttps://campusly.org/lookingDetail/{{looking.id}}/of/{{looking.id}}">
                         <i class="fa fa-envelope-o fa-lg"></i></a>
