--- a/client/index.html
+++ b/client/index.html
@@ -33,8 +33,8 @@
       <link rel="stylesheet" href="bower_components/toastr/toastr.css" />
       <link rel="stylesheet" href="bower_components/angucomplete-alt/angucomplete-alt.css" />
       <link rel="stylesheet" href="bower_components/slick-carousel/slick/slick.css" />
-      <link rel="stylesheet" href="bower_components/ngDialog/css/ngDialog.css" />
-      <link rel="stylesheet" href="bower_components/ngDialog/css/ngDialog-theme-default.css" />
+      <link rel="stylesheet" href="bower_components/ngDialog/css/ngDialog.min.css" />
+      <link rel="stylesheet" href="bower_components/ngDialog/css/ngDialog-theme-default.min.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -101,7 +101,7 @@
       <script src="bower_components/angular-media-queries/match-media.js"></script>
       <script src="bower_components/pubnub-angular/lib/pubnub-angular.js"></script>
       <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
-      <script src="bower_components/ngDialog/js/ngDialog.js"></script>
+      <script src="bower_components/ngDialog/js/ngDialog.min.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
@@ -148,6 +148,7 @@
           <script src="app/dashboard/my-profile/my.profile.route.js"></script>
           <script src="app/landing/landing.controller.js"></script>
           <script src="app/messages/messages.controller.js"></script>
+          <script src="app/messages/messages.controller.js.old.js"></script>
           <script src="app/ngDialog.controller.js"></script>
           <script src="app/prerender.controller.js"></script>
           <script src="app/roomDetail/roomDetail.controller.js"></script>
