Added localstorage for roommate lookings

--- a/client/app/dashboard/looking/searchCriteria.html
+++ b/client/app/dashboard/looking/searchCriteria.html
@@ -251,7 +251,7 @@
       <!-- end of 3 columns for room search criteria -->
 
       <div class="row post-padding" style="text-align: center; margin-top: 20px">
-        <button class="btn-rented-medium primary" id="search" name="search" ng-click="looking.search(false)">Search</button>
+        <button class="btn-rented-medium primary" id="search" name="search" ng-click="looking.searchFromButton()">Search</button>
         <button class="btn-rented-small reset" id="search" name="search" ng-click="looking.clearSearch(true)">Clear</button>
       </div>
 
